@@ -32,7 +32,7 @@ def configure(conf):
 
     autowaf.check_pkg(conf, 'lv2', atleast_version='1.3.0', uselib_store='LV2')
     autowaf.check_pkg(conf, 'lilv-0', uselib_store='LILV',
-                      atleast_version='0.14.0', mandatory=True)
+                      atleast_version='0.15.1', mandatory=True)
     autowaf.check_pkg(conf, 'serd-0', uselib_store='SERD',
                       atleast_version='0.5.0', mandatory=True)
     autowaf.check_pkg(conf, 'suil-0', uselib_store='SUIL',
